Fix covered GeoJSON menu. Fix covered / missing tooltips.

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -281,7 +281,7 @@ map-view {
 }
 
 .p-tooltip {
-  z-index: 9003 !important;
+  z-index: 30050 !important;
 }
 
 .p-splitter {
